fail_crate/tests/const_and_optional.stderr
error: `optional` without an explicit `default = ...` cannot be used in constant constructors.
 --> fail_crate/tests/const_and_optional.rs:6:11
  |
6 |     #[new(optional)]
  |           ^^^^^^^^
